# kremetart

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cliff.toml  pyproject.toml  tbump.toml
.claude/rules/: architecture.md  python-standards.md  testing-and-ci.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml  update-cabs.yml
docs/superpowers/plans/: 2026-06-15-accuracy-verification.md  2026-06-15-healpix-dft-operator.md  2026-06-15-smoovie.md  2026-06-16-smoovie-common-frame.md  2026-06-16-smoovie-gain-and-overlay.md  2026-06-16-smoovie-gpu-holoscan-phase2.md  2026-06-16-smoovie-performance-phase1.md  2026-06-17-smoovie-iwp-filter.md  2026-06-22-live-web-visualizer.md  2026-06-24-reweighted-l1-fista.md  2026-06-24-stefcal-calibration-core.md  2026-06-25-reweighted-l1-deconvolution.md  2026-06-26-three-stream-comparison-viewer.md
docs/superpowers/specs/: 2026-06-15-accuracy-verification-design.md  2026-06-15-healpix-dft-operator-design.md  2026-06-15-smoovie-design.md  2026-06-16-smoovie-common-frame-design.md  2026-06-16-smoovie-gain-and-overlay-design.md  2026-06-16-smoovie-performance-and-gpu-design.md  2026-06-17-smoovie-iwp-filter-design.md  2026-06-22-live-web-visualizer-design.md  2026-06-23-beam-measurement-operator-design.md  2026-06-23-tikhonov-cg-regularisation-design.md  2026-06-24-reweighted-l1-fista-design.md  2026-06-24-stefcal-calibration-core-design.md  2026-06-25-reweighted-l1-deconvolution-design.md  2026-06-26-three-stream-comparison-viewer-design.md
docs/tex/calimage/: kremetart_imaging_and_calibration.tex
docs/tex/detector/: kremetart_detector.tex
docs/tex/unified/: kremetart_design.tex
scripts/: README.md  compare_regularisers.py  overwrite_tart_gains.py  stefcal_calibrate.py  validate_tart_gains.py
src/kremetart/: __init__.py  _container_image.py
src/kremetart/cabs/: onboard.yml  smoovie.yml  stream_msv4.yml
src/kremetart/cli/: __init__.py  onboard.py  smoovie.py  stream_msv4.py
src/kremetart/core/: __init__.py  onboard.py  smoovie.py  smoovie_app.py  smoovie_prepare.py  stream_msv4.py
src/kremetart/operators/: __init__.py  dft_healpix.py  dft_lm.py  dft_lm_tiled.py  io.py  iwp_kalman.py  l1_reweight.py  smoovie_app.py  tikhonov.py  web_sink.py
src/kremetart/opt/: __init__.py  cg.py  fista.py
src/kremetart/static/: index.html
tests/: accuracy_helpers.py  conftest.py  test_accuracy_helpers.py  test_accuracy_l1_geometry.py  test_accuracy_l2_imaging.py  test_beam.py  test_calibration.py  test_cg.py  test_fista.py  test_gains.py  test_healpix_dft.py  test_install.py  test_iwp.py  test_profiling.py  test_read_tart_hdf_msv4.py  test_rephasing.py  test_roundtrip.py  test_satellites.py  test_serve_integration.py  test_skymodel.py  test_smoovie.py  test_smoovie_core.py  test_smoovie_gpu.py  test_smoovie_prepare.py  test_smoovie_stability.py  test_stefcal.py  test_stefcal_realdata.py  test_structure.py  test_visualisation.py  test_web_viz.py
(+16 files in other folders)
