[project]
name = "kremetart"
version = "0.0.0"
description = "Kalman Real-time Evidence Monitoring Extractor for TART"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "landmanbester", email = "lbester@sarao.ac.za" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "healpy>=1.19.0",
    "hip-cargo>=0.2.1",
]

# Lightweight install (default):  pip install kremetart
#     Only pulls hip-cargo + typer. Suitable for cab consumers (e.g. stimela)
#     and for running commands via container fallback. Generated CLI wrappers
#     lazy-import core/, so when heavy deps are missing the wrapper drops into
#     run_in_container() automatically.
# Full install:                    pip install kremetart[full]
#     Adds the heavy runtime deps that core/ implementations need to execute
#     natively. Add new deps to the "full" extra below as you grow core/.
[project.optional-dependencies]
full = [
    "numpy>=2.0.0",
    "scipy>=1.15.0",
    "xarray>=2025.0",
    "astropy>=6.0.0",
    "matplotlib>=3.8.0",
    "zarr>=2.18.3",
    "holoscan-cu13>=4.3.0",
    "tart-tools>=1.4.5 ; python_version >= '3.11'",
    "netcdf4>=1.7.4 ; python_version >= '3.11'",
    "tart[all]>=1.4.5  ; python_version >= '3.11'",
    "arcae>=0.5.2,<0.6.0 ; python_version >= '3.11'",
    "xarray-ms>=0.5.5 ; python_version >= '3.11'",
    "msv4-utils>=0.0.3 ; python_version >= '3.11'",
]

[project.urls]
Homepage = "https://github.com/landmanbester/kremetart"
Repository = "https://github.com/landmanbester/kremetart"
"Bug Tracker" = "https://github.com/landmanbester/kremetart/issues"

[project.scripts]
kremetart = "kremetart.cli:app"

[build-system]
# NOTE: This uv_build constraint is intentionally aligned with hip-cargo's own pyproject.toml.
# If you bump uv_build in hip-cargo, update this template constraint to match.
requires = ["uv_build>=0.8.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N802", "N803", "N812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take more time to run",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "tbump>=6.11.0",
    "pre-commit>=4.0.0",
    "ipdb",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pyproj>=3.6.0",
    "gdown>=5.0.0",
]
